Added a missing line

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -21,7 +21,7 @@
     "add": "Ajouter avec manilua",
     "remove": "Retirer avec manilua",
     "loading": "Chargement ...",
-    "removing": "Removing...",
+    "removing": "Suppression...",
     "cancel": "Annuler"
   },
   "tooltip": {
