Attempt to fix `check-availability` stalling
- Also add French Localisation to i18n mapping

--- a/locales/en.json
+++ b/locales/en.json
@@ -9,8 +9,8 @@
     "getApiKey": "Get your API key from:",
     "website": "www.piracybound.com/manilua",
     "placeholder": "Enter your manilua API key...",
-    "instructions": "Paste your manilua API key below. You can find it at piracybound.com.",
-    "example": "Example: MANI-XXXX-XXXX-XXXX. The key is case-sensitive.",
+    "instructions": "Paste your manilua API key below. You can find it at https://www.piracybound.com/manilua.",
+    "example": "Example: manilua_XXXXXXXXXXXXXXXX.",
     "required": "Please enter your API key.",
     "save": "Save API Key",
     "saving": "Saving...",
