--- a/locales/es.json
+++ b/locales/es.json
@@ -9,8 +9,8 @@
     "getApiKey": "Obtén tu clave API en:",
     "website": "www.piracybound.com/manilua",
     "placeholder": "Ingresa tu clave API de manilua...",
-    "instructions": "Pega tu clave API de manilua abajo. Puedes encontrarla en piracybound.com.",
-    "example": "Ejemplo: MANI-XXXX-XXXX-XXXX. La clave distingue mayusculas y minusculas.",
+    "instructions": "Pega tu clave API de manilua abajo. Puedes encontrarla en https://www.piracybound.com/manilua.",
+    "example": "Ejemplo: manilua_XXXXXXXXXXXXXXXX.",
     "required": "Por favor ingresa tu clave API.",
     "save": "Guardar clave API",
     "saving": "Guardando...",
