--- a/locales/fr.json
+++ b/locales/fr.json
@@ -9,8 +9,8 @@
     "getApiKey": "Obtenez votre clé d’API:",
     "website": "www.piracybound.com/manilua",
     "placeholder": "Insérez vote clé d’API manilua...",
-    "instructions": "Collez votre clé d’API en dessous. Vous pouvez la trouver sur piracybound.com.",
-    "example": "Exemple: MANI-XXXX-XXXX-XXXX. Les majuscules comptent.",
+    "instructions": "Collez votre clé d’API en dessous. Vous pouvez la trouver sur https://www.piracybound.com/manilua.",
+    "example": "Exemple: manilua_XXXXXXXXXXXXXXXX",
     "required": "Insérez votre clé d’API svp.",
     "save": "sauvegarder la clé d’API",
     "saving": "Sauvegarde...",
