--- a/locales/pt-BR.json
+++ b/locales/pt-BR.json
@@ -9,8 +9,8 @@
     "getApiKey": "Obtenha sua chave da API em:",
     "website": "www.piracybound.com/manilua",
     "placeholder": "Digite sua chave da API do manilua...",
-    "instructions": "Cole sua chave API do manilua abaixo. Voce pode encontra-la em piracybound.com.",
-    "example": "Exemplo: MANI-XXXX-XXXX-XXXX. A chave diferencia maiusculas de minusculas.",
+    "instructions": "Cole sua chave API do manilua abaixo. Voce pode encontra-la em https://www.piracybound.com/manilua.",
+    "example": "Exemplo: manilua_XXXXXXXXXXXXXXXX.",
     "required": "Por favor informe sua chave API.",
     "save": "Salvar chave da API",
     "saving": "Salvando...",
